--- a/Todoer/View/Base.lproj/Main.storyboard
+++ b/Todoer/View/Base.lproj/Main.storyboard
@@ -118,5 +118,5 @@
             <point key="canvasLocation" x="32.799999999999997" y="-432.26600985221677"/>
         </scene>
     </scenes>
-    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
+    <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
